# satsforcompute

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  DEPLOY.md  Dockerfile  OPS_REPO.md  README.md  index.html  style.css
.github/workflows/: ci.yml  deploy-bot.yml  deploy.yml  publish-mcp.yml  release.yml  website-preview.yml
apps/: workload.json.tmpl
mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: client.ts  index.ts  tools.ts
mcp/test/: tools.test.ts
skills/satsforcompute/: SKILL.md
src/: btc.rs  btcpay.rs  claim.rs  config.rs  db.rs  gcp.rs  github.rs  lib.rs  lifecycle.rs  local.rs  main.rs  models.rs  pool.rs  provision.rs  routes.rs  server.rs  templates.rs  tools.rs
tests/: integration_signet.rs
tests/common/: mod.rs  signet_wallet.rs
