[package]
name = "satsforcompute"
version = "0.1.0"
edition = "2024"
description = "Pay sats, get attested compute. Self-service marketplace built on DevOpsDefender."
license = "MIT"
repository = "https://github.com/satsforcompute/satsforcompute"

[[bin]]
name = "satsforcompute"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
# Signet integration test only — the test wallet broadcasts its own
# payment so the test is fully self-driving (no manual faucet drip
# between runs). Not a build dep: only compiled when running tests.
bdk_wallet = "3"
bdk_esplora = { version = "0.22", default-features = false, features = ["async-https-rustls"] }
# Direct dep so we can opt into the `tokio` feature (gives us
# `DefaultSleeper: Sleeper` for AsyncClient::broadcast). bdk_esplora
# 0.22 doesn't pass that through.
esplora-client = { version = "0.12", default-features = false, features = ["async-https-rustls", "tokio"] }
